# tdsql

./: README.md  poetry.toml  pyproject.toml
.github/workflows/: ci.yaml
sample/: hello-world.sql  sub.yaml  tdsql.yaml
sample/glob/: sample1.sql  sample1.yaml
tdsql/: __main__.py  client.py  command.py  exception.py  test_case.py  test_config.py  util.py
tdsql/client/: __init__.py  base.py  bigquery.py
tests/: test_client.py  test_command.py  test_tdsql.py  test_test_case.py
